# PsychotypeBot

./: CMakeLists.txt  README.md  dictionary.hpp  helpers.cpp
include/: dictionary.hpp  psycho.hpp
src/: bot.cpp  helpers.cpp
